bin_PROGRAMS = aviafbtool fbclear lcddump saa switch rcsim aviaext audioplay

aviafbtool_SOURCES = aviafbtool.c
aviaext_SOURCES = aviaext.c
#camd_SOURCES = camd.c
fbclear_SOURCES = fbclear.c
lcddump_SOURCES = lcddump.c
saa_SOURCES = saa.c
switch_SOURCES = switch.c
rcsim_SOURCES = rcsim.c
audioplay_SOURCES = audioplay.c
